# robotframework-roboview

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE.txt  README.md  pyproject.toml
.github/instructions/: copilot-instructions.md
.github/skills/: README.md
.github/skills/api-development/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/cross-surface-changes/: SKILL.md
.github/skills/diagnose/: SKILL.md
.github/skills/improve-architecture/: SKILL.md
.github/skills/report-generation/: SKILL.md
.github/skills/robot-framework/: SKILL.md
.github/skills/roboview-backend/: SKILL.md
.github/skills/roboview-extension/: SKILL.md
.github/skills/roboview-webview/: SKILL.md
.github/skills/tdd/: SKILL.md
.github/workflows/: codestyle.yaml
.github/workflows/poetry_template/: action.yaml
vscode-integration/: .vscodeignore  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  roboview-0.0.1.vsix
vscode-integration/src/: commands.ts  extension.ts  roboViewPanel.ts  views.ts
vscode-integration/src/services/: backendConnectionManager.ts  lifecycleManager.ts  pathManager.ts  pythonEnvironmentManager.ts  robocopConfigManager.ts
vscode-integration/webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vscode-integration/webview-ui/src/: App.css  App.tsx  globals.css  index.tsx
vscode-integration/webview-ui/src/hooks/: useMessageListener.ts
vscode-integration/webview-ui/src/types/: dashboard.ts  files.ts  keywords.ts  (+3 more)
(+70 files in other folders)
