[tool.poetry]
name = "robotframework-roboview-meta"
version = "0.0.2"
description = "RoboView is a Visual Studio Code extension designed to help you manage keywords within your Robot Framework projects and improve overall test quality through built-in Robocop integration. Its primary goal is to provide a comprehensive overview of all keywords and their relationships, making it easier to understand and maintain your test automation codebase."
license = "Apache 2.0"
authors = ["viadee Unternehmensberatung AG"]
readme = "README.md"
package-mode = false
packages = [
    { include = "./packages/roboview" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
roboview = {path = "packages/roboview"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pyright = "^1.1.406"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"